# AI-Code-Review-and-Architecture-Analysis-Platform

./: .commitlintrc.json  .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierrc  .prettierrc.js  .vercelignore  BATCH_1_IMPLEMENTATION_SUMMARY.md  COMPRESSED_IMPLEMENTATION_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.router  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUCCESS_REPORT.md  IMPLEMENTATION_COMPLETE.md  Makefile  PERFECT_PLATFORM_ACHIEVED.md  QUICK_START_README.md  README.md  README_ENHANCED.md  ROLLBACK.md  SECURITY.md  THREE_VERSION_AI_COMPLETE.md  clean_start.sh  cleanup-report.md  complete_frontend.html  complete_server.py  dashboard.html  database_server.py  docker-compose.enhanced.yml  docker-compose.original.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  enhanced_dashboard.html  enhanced_server.py  final_server.py  (+17 more)
.github/: CODEOWNERS  (+1 more)
backend/: .dockerignore  .env.example  .env.glm.example  .flake8  Dockerfile  Dockerfile.enhanced  Dockerfile.fixed  Dockerfile.optimized  Dockerfile.security  Dockerfile.simple  alembic.ini  pyproject.toml  requirements-edge.txt  requirements.txt  setup.cfg  simple_main.py
backend/ai/: __init__.py  cache.py  eval.py  metrics.py  protections.py  registry.json  safety_eval.py  security.py
backend/ai/engines/: legacy.py  next.py  stable.py
backend/ai/engines/shared/: __init__.py  json_utils.py  prompt_loader.py  schema.py
backend/ai/experiments/: runner.py
backend/ai/experiments/configs/: next_hpo.yaml
backend/ai/inference/: ensemble.py  postprocessing.py
backend/ai/models/: legacy.yaml  next.yaml  stable.yaml
backend/ai/models/code_representation/: data_utils.py  graph_encoder.py  model.py  multimodal_fusion.py  text_encoder.py  train.py  trainer.py  training_objectives.py
backend/ai/models/defect_detection/: README.md  classifiers.py  data_collection.py  data_preprocessing.py  example.py  train.py  visualization.py
backend/ai/prompts/legacy/: review.md
backend/ai/prompts/next/: review.md
backend/ai/prompts/stable/: review.md
backend/ai/rag/: __init__.py  ast_index.py  citations.py  hybrid_retrieval.py  ingest.py  search.py
backend/ai/safety/: autofix.py  dataset.py  judge.py  policy.py
backend/ai/telemetry/: tracing.py
backend/ai/training/: augmentation.py  evaluate.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_stub.py  20251020_0001_initial_models.py  20251120_add_analysis_cache.py  20251120_add_tenant_repo.py  20251124_enhanced_models.py
backend/app/: main.py  worker.py  worker_fixed.py
backend/app/api/: code_converter.py  config_management.py  deps.py  health.py  schemas.py
backend/app/api/api_v1/: api.py
backend/app/api/endpoints/: ai_analysis.py  auth.py  baselines.py  cache_management.py  code_parser.py  monitoring.py  search.py  sessions.py  smart_cache.py  versions.py
backend/app/api/v1/: projects.py  projects_enhanced.py
backend/app/core/: ai_optimizer.py  code_analyzer.py  config.py  config_manager.py  config_simple.py  database_pool.py  dependencies.py  dynamic_config.py  error_handling.py  exceptions.py  feature_flags.py  health.py  health_check.py  logger.py  metrics.py  middleware.py  monitoring.py  observability.py  performance.py  prometheus_metrics.py  resilience.py  security.py  security_optimized.py
backend/app/core/cache/: __init__.py  cache_manager.py  database_cache.py  distributed_cache.py  local_cache.py  metrics.py  optimized_cache.py  predictive_cache.py  predictive_cache_simple.py  redis_cache.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: cache_middleware.py
backend/app/models/: __init__.py  alert.py  analysis_cache.py  analysis_session.py  audit.py  base.py  baseline.py  core.py  enhanced.py  eval.py  experiments.py  file_version.py  project.py
backend/app/schemas/: project.py
backend/app/services/: ai_reviewer.py  analysis_tasks.py  async_processor.py  blockchain_integration.py  chainguard_service.py  code_sandbox.py  container_optimizer.py  conversion_config.py  dependency_graph.py  dsl_rules.py  edge_computing.py  gateway_mesh.py  github_integration.py  glm_service.py  graph_learning_pyg.py  health_check.py  live_preview.py  llm_evaluation.py  microservices.py  multi_tenant_aiops.py  observability.py  rule_engine.py  s3_storage.py  semantic_diff.py  smart_cache_service.py  static_analyzer.py  static_analyzer_fixed.py  static_analyzer_simplified.py  vector_search_pgvector.py  vulnerability_scanner.py  websocket_service.py
backend/app/services/api_mapping/: __init__.py  standard_lib.py
backend/app/tasks/: analysis_tasks.py  queue.py
backend/config/: development.yaml  edge.yaml  production.yaml
backend/monitoring/: prometheus.yml
backend/nginx/: edge-nginx.conf  nginx.conf
backend/policy/: promotion.yaml
backend/scripts/: deploy.sh  init_project.py  p2_quickstart.sh  seed_demo_data.py
backend/scripts/promote/: slo_gate.py
backend/tests/: conftest.py  e2e_cache_test.py  p2_performance_test.py  test_ai_analysis_api.py  test_code_parser.py
backend/tests/ai/: test_structured_review.py
backend/tests/ai_models/: test_model_accuracy.py  test_model_performance.py  test_model_robustness.py
backend/tests/integration/: test_api_endpoints.py  test_api_mapping.py  test_converters.py  test_database_operations.py  test_framework_conversion.py  test_third_party_services.py
backend/tests/unit/: test_ai_models.py  test_core_algorithms.py  test_quality_assurance.py  test_utils.py
backend/tools/: uv_integration.py
(+364 files in other folders)
